app/assets/stylesheets/discover.css.scss
// Place all the styles related to the trips controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
/*
 *= require shared/main
 *= require map_based/common
 *= require bootstrap-fileupload.min
**/

@import "colors.css.scss";

html, body {
    height:100%;
}

.top-bar {
	.logo {
		margin-top: 2.5px;
		margin-left: 20px;
	}
}

#header-container {
	.logo-img {
		margin-bottom: 10px;
		border-radius: 5px;
		box-shadow: black;
		background-color: white;
		width: 100px;
		height: 100px;
		padding: 5px;
		border: 1px solid $wikicleta_light_blue;
	}
}

#host-container {
	margin: 0px;
	padding: 0px;
	
	.controls {
		padding-top: 5px;
		
		a {
			margin-left: 10px;
		}
	}
	
	.maximize {
		display: none;
	}
}

.poi {
	.title {
		margin-top: 10px;
		font-size: 24px;
		color: $wikicleta_orange;
	}
	
	.subtitle {
		text-align: center;
		font-size: 14px;
		font-weight: bold;
		color: $wikicleta_blue;
		margin-top: 10px;
	}
	
	.content {
		font-size: 14px;
		color: $wikicleta_blue;
		text-align: justify;
		margin: 0px 20px 0px 20px;
	}
	
	.extras {
		margin-top: 5px;
		
		ul {
			li {
				display: inline-block;
			}
		}
	}
	
	.contributor {
		text-align: right;
		padding: 5px 10px 5px 0;
		
		.details {
			margin-right: 10px;
			font-size: 13px;
		}
	}
	
	.timings {
		font-size: 13px;
	}
	
	.contact {
		margin-bottom: 10px;
		a {
			padding: 0;
			margin: 0;
		}
		li {
			display: inline-block;
		}
	}
	
	.horary {
		font-size: 13px;
		margin: 0;
		padding: 0;
	}
	
	.availability {
		
		.block {
			display: inline-block;
			margin: 10px;
			p {
				margin: 0;
				padding: 0;
			}
			
			.number {
				font-size: 25px;
				font-weight: bold;
			}
			
			.text {
				color: $wikicleta_orange;
				font-size: 14px;
				text-align: center;
			}
		}
		
	}
}

.inner-panel {
	
	.with-focus {
		border: none !important;
	}
	
	.empty-listing {
		margin-left: 100px;
		
		.suggest {
			margin-top: 40px;
			font-size: 20px;
			color: $wikicleta_orange;
			margin-bottom: 40px;
			
			.blue {
				color: $wikicleta_blue;
			}
		}
	}
	
	.listing-actions {
		display: none;
		padding: 20px 10px 10px 0px !important;
		text-align: right !important;
		a {
			color: $wikicleta_orange;
			text-decoration: none;
		}
		
		a.btn {
			color: white !important;
			margin-left: 20px;
		}
	}
	
	.activities {
		padding-top: 20px;
		
		.results {
			margin-right: 18px;
			text-align: right;
			color: #9DA2B5;
			margin-bottom: 15px;
		}

		
		.items {
			ul.sub-actions {
				list-style: none;
				li {
					display: inline-block;
					margin-right: 10px;
					padding-bottom: 0px !important;
					margin-bottom: 0px !important;
				}
				
				
				.activity {
					padding-right: 10px;

					p {
						text-align: right;
						font-size: 13px;
						margin:0px;
						margin-bottom: 5px;
						color: #BCBCBC;
						
					}


					.numeric {
						font-weight: bold;
						font-size: 30px;
						color: #BCBCBC;
					}
				}
				
				li.active a {
					.numeric {
						color: $wikicleta_orange !important;
					}
					
					.kind {
						color: $wikicleta_blue;
					}
				}
			}

			
			a:hover {
				text-decoration: none;
				color: $wikicleta_orange !important;
			}
			display: inline-block;
		}
	}

	.content {
		padding: 0px 0px 10px 0px !important;
	}
	
	.actions-bar {
		padding: 6px 8px 8px 8px;
		
		.call-to-act {
			display: inline-block;
			padding-top: 4px;
			font-size: 15px;
			color: $wikicleta_orange;
			margin-right: 10px;
			margin-left: 10px;
		}
	}
}

.trips-list {
	width: 500px;
	margin: 30px auto 0 auto;
	
	.title {
		font-size: 27px;
		font-weight: bold;
		color: $wikicleta_blue;
	}
	
	.inner-panel {
		margin-top: 0 !important;
	}
	
	.call-to-action {
		margin-top: 5px !important;
		
	 p {
		padding: 5px;
		margin: 5px 0 5px 0;
		font-size: 18px;
		.title {
			font-size: 16px;
			color: $wikicleta_orange;
		}
		
		.subtitle {
			font-size: 14px;
			color: $wikicleta_blue;
		}
	}
	}
}

.items-list {
	.trip:hover {
		background-color: rgba(32,59,80,0.1);
	}
	
	.trip {
		
		.closer {
			width: 100px;
			height: 100px;
			background-color: black;
			position: fixed;
			left: 830px;
			top: 180px;
		}
		
		border-top: 1px solid rgba(32,59,80,0.1);
		
		padding: 10px 20px 10px 0px;
		margin: 0px 0px 0px 0px;
		
		.details {
			> div {
				vertical-align: top;
				display: inline-block;
			}
			
			.info {
				margin-right: 10px;
			}
			
			padding: 10px 10px 3px 10px;
			text-align: right;
			margin-left: 60px;
			.event-name, .days-to-event {
				a {
					color: $wikicleta_orange;
					text-decoration: none;
					font-weight: 400;
				}
				color: $wikicleta_blue;

				font-weight: 100;
				margin: 0px !important;
				padding: 0px !important;
				font-family: 'Gotham Rounded';
			}

			.event-name {
				font-size: 23px;
			}

			.days-to-event {
				font-size: 13px;
				margin-top: 20px !important;
				text-transform: uppercase;
			}

			.event-timings {
				font-size: 14px;
				color: $wikicleta_blue;

			}
		}
		
		.image {
			
		}
		
		.extras {
			display: none;
			
			.categories-menu {
				margin-top: 20px;
				margin-bottom: 0px;
				text-align: right;
				
				ul {
					list-style-type: none !important;
					margin-left: auto;
					margin-right: auto;

					li.enabled:hover, li.active {
						background-color: #E6E6E6;
					}

					li {
						padding: 5px 10px 5px 10px;
						display: inline-block !important;
						margin-right: 10px;
						margin-left: 10px;
						font-size: 11px;

						a {
							text-decoration: none;
							color: $wikicleta_blue;
						}
					}
				}
		}

	}
	
}


.dropdown-menu {
	li {
		width: 100%;
	}
}

.trip-detailed {
	
	.title {
		font-size: 10px;
		text-transform: uppercase;
		color: $wikicleta_orange;
		margin-top: 10px;
	}
	
	.details {
		font-size: 12px;
		color: $wikicleta_blue;
	}
	
	p, ul {
		font-size: 12px;
		padding: 0;
		margin: 0;
	}
	
	.name {
		font-size: 30px;
		color: $wikicleta_orange;
	}
	
	.city {
		margin-left: 10px;
		font-size: 15px;
		color: $wikicleta_blue;
		text-transform: uppercase;
	}
	
	.periodicity {
		margin-left: 30px;
		color: $wikicleta_orange;
	}
	}
	
}

#cycling_groups-form {
	padding-left: 30px;
	padding-right: 20px;
}

/* Discover section styles  */

.top-bar {
	-moz-box-shadow: 0 0 3px #888;
	-webkit-box-shadow: 0 0 3px#888;
	box-shadow: 0 0 3px #888;
	border-radius: 3px;
	
	ul {
		margin: 5px 10px 5px 10px;
	}
}

.on-map-center {
	.top-bar {
		position: fixed;
		z-index: 99999;
		width: 50%;
		margin: 0 0 0 -20%;
		left: 50%;
		height: 50px;
		min-width: 1100px;
		background-color: white;

		ul {
			list-style: none;
			
			li {
				padding: 10px;
				display: inline-block;
				a, a:hover {
					font-size: 16px;
					text-decoration: none !important;
				}
			}
			
			li.with-left-divider {
				border-left: 3px solid $wikicleta_orange;
				padding-left: 15px;
			}
		}
	}
}

.discover {
	
	.route, .cycle_path {
		text-align: center;
		
		p {
			text-align: center;
		}
		
		.metrics {
			margin-top: 20px !important;
			.value {
				font-size: 40px;
				color: $wikicleta_blue;
				margin-right: 10px;
			}
			
			.unit {
				font-size: 14px;
				color: $wikicleta_orange;
			}
			
		}
		
		.name {
			margin-top: 20px;
			font-size: 15px;
			text-transform: uppercase;
			color: $wikicleta_orange;
		}
		
	}
	
	#content-centered {
	}
	
	.panel {
		background-color: white;
		width: 400px;
		padding-top: 20px !important;
		margin: 50px auto 0px auto;
	}
	
	.floating-panel {
		width: 130px;
		position: fixed;
		z-index: 99999;
		right: 70px;
		top: 90px;
		background: rgba(255,255,255,0.2);
		padding: 10px;
		
		.half {
			display: inline-block;
			width: 30px;
			padding: 10px;
			background-color: rgba(255,255,255,0.5) !important;
		}
		
		.half:hover {
			background-color: rgba(255,255,255,1) !important;
		}
		
		.inner-panel {
			padding: 5px;
			margin: 5px;
		}
		
		.panel-white {
			border-radius: 5px;
			border: 1px solid #D7E1F8;
			background-color: white;
			overflow: scroll;
		}
		
		.panel-scroll {
			height: 420px;
		}
	}

	ul {
		list-style: none;
		margin: 0px;
		
		li {
			a.selected {
				opacity: 1;
			}
			a:hover {
				opacity: 0.8;
				color: $wikicleta_orange;
			}
			a {
				opacity: 0.4;
				margin: 20px auto 20px auto;
				text-align: center;
				display: block;
				width: 50px;
				span {
					display: block;
					margin-top: 10px;
					font-size: 13px;
				}
			}
		}
	}
	
	
}

